Fix for overlapping close button in mobile

--- a/src/sass/directive.scss
+++ b/src/sass/directive.scss
@@ -16,7 +16,7 @@
 	}
 	.entity-name{
 		color: #fff;
-		margin-top: 25px;
+		margin-top: 50px;
 		font-size: 24px;
 		width: 100%;
 	}
